--- a/stridely/src/styles/globals.scss
+++ b/stridely/src/styles/globals.scss
@@ -37,6 +37,7 @@ body {
   background-color: $color-bg;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 // --- Typography base ---
